[Freestyler] Fix input form not aligned with the system messages
Bug: none
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5672212
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -28,7 +28,7 @@
   margin-top: auto;
   display: flex;
   flex-direction: column;
-  padding: var(--sys-size-8) var(--sys-size-8) 0;
+  padding-top: var(--sys-size-8);
   margin-bottom: var(--sys-size-4);
   max-width: 100%;
 }
